--- a/StudentInformation/Areas/Admin/Views/Student/Create.cshtml
+++ b/StudentInformation/Areas/Admin/Views/Student/Create.cshtml
@@ -1,4 +1,8 @@
 ﻿@model StudentInformationSystem.Models.Student
+@{
+    ViewBag.Title = "Create";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
 
 @using (Html.BeginForm()) 
 {
