--- a/StudentInformation/Areas/Admin/Views/Student/Index.cshtml
+++ b/StudentInformation/Areas/Admin/Views/Student/Index.cshtml
@@ -56,7 +56,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.StudentId }) |
             @Html.ActionLink("Details", "Details", new { id=item.StudentId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.StudentId })
+           @Html.ActionLink("Delete", "Delete", new { id = item.StudentId }, new { onclick = "return confirm('Are you sure you want to delete?')" })
         </td>
     </tr>
 }
