--- a/StudentInformation/Areas/Admin/Views/Course/Index.cshtml
+++ b/StudentInformation/Areas/Admin/Views/Course/Index.cshtml
@@ -50,7 +50,7 @@
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.CourseId }) |
             @Html.ActionLink("Details", "Details", new { id=item.CourseId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.CourseId })
+            @Html.ActionLink("Delete", "Delete", new { id = item.CourseId }, new { onclick = "return confirm('Are you sure you want to delete?')" })
         </td>
     </tr>
 }
