--- a/StudentInformation/Areas/Admin/Views/Student/Index.cshtml
+++ b/StudentInformation/Areas/Admin/Views/Student/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<StudentInformationSystem.Models.Student>
+﻿@*@model IEnumerable<StudentInformationSystem.Models.Student>*@
+@model PagedList.IPagedList<StudentInformationSystem.Models.Student>
+@using PagedList.Mvc;
+<link href="~/Content/PagedList.css" rel="stylesheet" type="text/css" />
 
 @{
     ViewBag.Title = "Index";
@@ -10,25 +13,27 @@
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+    <p>
+        Find by StudentName: @Html.TextBox("SearchString")
+        <input type="submit" value="Search" />
+    </p>
+
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.FirstName)
+           Name
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.LastName)
+           Address
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Address)
+           ContactNumber
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.ContactNumber)
+            EmailAddress
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EmailAddress)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DOB)
+            DOB
         </th>
         <th></th>
     </tr>
@@ -36,10 +41,7 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.LastName)
+            @Html.DisplayFor(modelItem => item.FirstName) @Html.DisplayFor(modelItem => item.LastName)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Address)
@@ -62,3 +64,8 @@
 }
 
 </table>
+<br/>
+Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
+
+@Html.PagedListPager(Model, page => Url.Action("Index",
+    new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
